<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_standard">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/complete_dialog_image"
        style="@style/DialogImage"
        android:contentDescription="@string/game_complete_image_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:lottie_fileName="confetti.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <TextView
        android:id="@+id/complete_dialog_title"
        style="@style/DialogTitle"
        android:text="@string/game_complete_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/complete_dialog_image"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/complete_dialog_message"
        style="@style/DialogMessage"
        android:text="@string/game_complete_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/complete_dialog_title"
        app:layout_constraintVertical_chainStyle="packed" />

</android.support.constraint.ConstraintLayout>