<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_standard"
    android:visibility="invisible"
    tools:context=".ui.MainActivity">

    <!-- TODO: Consider creating custom view for a player card -->
    <!-- TODO: Consider changing to a RecyclerView if we want to support more than 2 players -->

    <android.support.v7.widget.CardView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_standard"
            android:orientation="horizontal">

            <TextView
                style="@style/HeaderLabel"
                android:gravity="end"
                android:text="@string/correct_label" />

            <TextView
                android:id="@+id/correct_count"
                style="@style/HeaderValue" />

            <TextView
                android:id="@+id/target_count"
                style="@style/HeaderValue" />

            <TextView
                style="@style/HeaderLabel"
                android:text="@string/target_label" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/players_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/reset_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <android.support.v7.widget.CardView
            android:id="@+id/player_1_card"
            style="@style/PlayerCard">

            <LinearLayout
                style="@style/PlayerContainer"
                android:layout_height="match_parent"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/player_1_name"
                    style="@style/PlayerName" />

                <ImageView
                    android:id="@+id/player_1_image"
                    style="@style/PlayerImage"
                    android:contentDescription="@string/player_image_content_description" />

                <TextView
                    android:id="@+id/player_1_score"
                    style="@style/PlayerScore" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/player_2_card"
            style="@style/PlayerCard">

            <LinearLayout
                style="@style/PlayerContainer"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/player_2_name"
                    style="@style/PlayerName" />

                <ImageView
                    android:id="@+id/player_2_image"
                    style="@style/PlayerImage"
                    android:contentDescription="@string/player_image_content_description" />

                <TextView
                    android:id="@+id/player_2_score"
                    style="@style/PlayerScore" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/reset_button"
        style="@style/FullWidthButton"
        android:text="@string/reset_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

</android.support.constraint.ConstraintLayout>